Added basic box rendering

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="heliRoam.js"></script>
 	<script src="renderer.js"></script>
 	<script src="physics.js"></script>
+	<script src="player.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
